# hexapod_ros

./: .gitignore  README.md
hexapod_bringup/: CMakeLists.txt  package.xml
hexapod_bringup/config/: benchmark_controller_mini_hexapod.yaml  benchmark_controller_pexod.yaml  common.yaml  common_mini_hexapod.yaml  hexaforce.yaml  hexaforce_controller_velocity.yaml  hexaforce_cpg_controller.yaml  hexaforce_cpg_controller_velocity.yaml  marta.yaml  mini_hexapod.yaml  optoforce_ISE_173.yaml  optoforce_ISE_174.yaml  optoforce_ISE_175.yaml  optoforce_ISE_177.yaml  optoforce_ISE_182.yaml  optoforce_ISE_184.yaml  pexod.yaml
hexapod_bringup/launch/: benchmark_mini_hexapod.launch  benchmark_pexod.launch  feet_force_sensors.launch  hexaforce.launch  hexaforce_cpg.launch  hexaforce_cpg_velocity.launch  hexaforce_velocity.launch  marta.launch  mini_hexapod.launch  mini_hexapod2.launch  optoforce_feet.launch  optoforce_transforms.launch  pexod.launch
hexapod_controllers/: CMakeLists.txt  frames.gv  hexapod_controllers_plugins.xml  package.xml
hexapod_controllers/include/hexapod_controllers/: benchmark_controller.hpp  closed_loop_cpg_controller_velocity.hpp  cpg.hpp  keep_body_level_velocity_controller.hpp  open_loop_cpg_controller.hpp  open_loop_cpg_controller_velocity.hpp  simple_closed_loop_controller_velocity.hpp  simple_closed_loop_cpg_controller_velocity.hpp  simple_position_controller.hpp
hexapod_controllers/src/: hexapod_controllers.cpp  open_loop_cpg_controller.cpp
hexapod_description/: CMakeLists.txt  Readme.md  package.xml
hexapod_description/config/: marta.rviz  pexod_description.rviz
hexapod_description/launch/: display_hexaforce.launch  display_marta.launch  display_mini_hexapod.launch  display_pexod.launch  hexaforce.launch  hexaforce_with_trackIK_hack.launch  marta.launch  mini_hexapod.launch  pexod.launch
hexapod_description/stl/: FR07-H101-centered.stl  first_link.stl  hexapod_bottom_plate.stl  leg.stl  second_link.stl  side.stl  third_link_v4.5.stl  third_link_v4_ascii.stl  third_link_v5.stl  u.stl
hexapod_description/urdf/: generate_pexod.py  hexaforce.xacro  hexaforce_visuals_collisions.xacro  hexaforce_with_trackIK_hack.xacro  marta.xacro  marta_visuals_collisions.xacro  mini_hexapod.urdf  mini_hexapod.xacro  mini_hexapod_visuals_collisions0.xacro  pexod.urdf  pexod.xacro  pexod_visuals_collisions.xacro
hexapod_description/urdf/modules/: body.xacro  body_with_trackIK_hack.xacro  hexaforce.xacro  hexaforce_with_trackIK_hack.xacro  leg.xacro  leg_hexaforce.xacro  leg_marta.xacro  leg_mini_hexapod.xacro  leg_pexod.xacro  legs.xacro  legs_hexaforce.xacro  legs_mini_hexapod.xacro  marta.xacro  mini_hexapod.xacro  pexod.xacro  robot.xacro
hexapod_description/urdf/results/: lengthes_0.txt  lengthes_1.txt  lengthes_10.txt  lengthes_100.txt  lengthes_1000.txt  lengthes_1001.txt  lengthes_1002.txt  lengthes_1003.txt  lengthes_1004.txt  lengthes_1005.txt  lengthes_1006.txt  lengthes_1007.txt  lengthes_1008.txt  lengthes_1009.txt  lengthes_101.txt  lengthes_1010.txt  lengthes_1011.txt  lengthes_1012.txt  lengthes_1013.txt  lengthes_1014.txt  lengthes_1015.txt  lengthes_1016.txt  lengthes_1017.txt  lengthes_1018.txt  lengthes_1019.txt  lengthes_102.txt  lengthes_1020.txt  lengthes_1021.txt  lengthes_1022.txt  lengthes_1023.txt  lengthes_1024.txt  lengthes_1025.txt  lengthes_1026.txt  lengthes_1027.txt  lengthes_1028.txt  lengthes_1029.txt  lengthes_103.txt  lengthes_1030.txt  lengthes_1031.txt  lengthes_1032.txt  (+3961 more)
hexapod_driver/: CMakeLists.txt  package.xml
hexapod_driver/cmake/: FindHexapodController.cmake
hexapod_driver/config/: pexod.yaml
hexapod_driver/include/hexapod_driver/: hexapod.hpp  hexapod_BD.hpp  hexapod_cartesian.hpp  hexapod_cpg.hpp  hexapod_imu.hpp  hexapod_imu_position.hpp  hexapod_imu_velocity.hpp
hexapod_driver/launch/: pexod.launch
hexapod_driver/src/: hexapod.cpp  hexapod_BD.cpp  hexapod_cartesian.cpp  hexapod_cpg.cpp  hexapod_driver.cpp  hexapod_driver_cartesian.cpp  hexapod_imu.cpp  hexapod_imu_position.cpp  hexapod_imu_velocity.cpp  read_state.cpp
hexapod_ros/: CMakeLists.txt  package.xml
pexod_description/: CMakeLists.txt  package.xml
pexod_description/launch/: display_pexod.launch  pexod.launch
pexod_description/urdf/: pexod.xacro
pexod_description/urdf/modules/: body.xacro  leg.xacro  legs.xacro  robot.xacro
pexod_driver/: CMakeLists.txt  package.xml
pexod_driver/include/pexod_driver/: pexod_driver.hpp
pexod_driver/src/: pexod_driver.cpp
