<?xml version="1.0"?>
<package>
  <name>hexapod_ros</name>
  <version>0.0.1</version>
  <description>hexapod_ros metapackage contains packages to integrate into ROS all of the ERC ResiBots hexapods.
  </description>

  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>


  <license>BSD</license>

  <url type="repository">https://github.com/resibots/hexapod_ros</url>
  <url type="bugtracker">https://github.com/resibots/hexapod_ros/issues</url>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pexod_description</run_depend>
  <run_depend>dynamixel_control_hw</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
